--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "devDependencies": {
     "mocha": "~1.9.0",
     "sinon-chai": "~2.3.1",
-    "chai": "~1.5.0",
-    "sinon": "~1.6.0"
+    "sinon": "~1.6.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-simple-mocha": "~0.4.0",
+    "grunt-contrib-watch": "~0.4.3"
   }
 }
