--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-simple-mocha": "~0.4.0",
-    "grunt-contrib-watch": "~0.4.3"
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-notify": "~0.2.3"
   }
 }
